--- a/TestHR.Web/Areas/Admin/Views/Branch/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Branch/Index.cshtml
@@ -20,6 +20,7 @@
                                     <th>Name</th>
                                     <th>Company</th>
                                     <th>Description</th>
+                                    <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -28,8 +29,7 @@
                                     <tr>
                                         <td>@branch.Name</td>
                                         <td>@branch.Company.Name</td>
-                                        <td>@branch.Description</td>
-                                        
+                                        <td>@branch.Description</td>                                        
                                         <td>
                                             <a class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
                                             <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
