--- a/TestHR.Web/Areas/Admin/Views/Holiday/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Holiday/Add.cshtml
@@ -29,7 +29,7 @@
                                     <label for="DateFrom">DateFrom</label>
                                 </div>
                                 <div class="input-field col s6">
-                                    <input id="DateTo" name="DateTo" type="text" class="validate datepicker">
+                                    <input id="DateTo" name="DateTo" type="date" class="validate datepicker">
                                     <label for="DateTo">DateTo</label>
                                 </div>
                             </div>
