--- a/TestHR.Web/Areas/Admin/Views/Company/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Company/Index.cshtml
@@ -36,12 +36,11 @@
                                     <td>@company.ContactPerson</td>
                                     <td>@company.ContactPersonEmail</td>
                                     <td>@company.ContactPersonPhone</td>
-                                    <td><a class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
+                                    <td><a href="@Url.Action("Edit","Company",new{id=company.Id})" class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
                                         <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
                                     </td>
                                 </tr>
                             }
-                            
                         </tbody>
                     </table>
                 </div>
