--- a/TestHR.Web/Areas/Admin/Views/Position/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Position/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TestHR.Entities.Position>
+﻿@using TestHR.Entities
+@model IEnumerable<TestHR.Entities.Position>
     @{
         ViewBag.Title = "Index";
         Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -43,7 +44,7 @@
                                             <td>Null</td>
                                         }
                                         <td>
-                                            <a class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
+                                            <a href="@Url.Action("Edit","Position",new{id=position.Id})" class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
                                             <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
                                         </td>
                                     </tr>
@@ -58,7 +59,6 @@
     </main>
 @section scripts
 {
-
     <script src="~/Plugins/datatables/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
