Employee Shift & Holiday Edit.. Shift And Holiday 100% Employee Not Saved

--- a/TestHR.Web/Areas/Admin/Views/Shift/Index.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Shift/Index.cshtml
@@ -24,6 +24,7 @@
                                     <th>IsDefault</th>
                                     <th>IsActive</th>
                                     <th>OfficeHourDescription</th>
+                                    <th>Action</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -39,7 +40,7 @@
                                         <td>@shift.OfficeHourDescription</td>
 
                                         <td>
-                                            <a class="btn-floating waves-effect waves-light green"><i class="material-icons">edit</i></a>
+                                            <a class="btn-floating waves-effect waves-light green" href="@Url.Action("Edit","Shift",new{id= shift.Id})"><i class="material-icons">edit</i></a>
                                             <a class="btn-floating waves-effect waves-light red"><i class="material-icons">delete</i></a>
                                         </td>
                                     </tr>
