--- a/TestHR.Web/Areas/Admin/Views/Employee/Add.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Employee/Add.cshtml
@@ -167,7 +167,7 @@
                                         </tr>
                                     </tbody>
                                     <tfoot>
-                                        <tr><td><input value="Add More.." onclick="AddNewEduRow()" class="" type="button" /></td></tr>
+                                        <tr><td><input value="Add More.." onclick="AddNewEduRow()" class="waves-effect waves-light btn" type="button" /></td></tr>
                                     </tfoot>
                                 </table>
                             </div>
