--- a/TestHR.Web/Areas/Admin/Views/Employee/Edit.cshtml
+++ b/TestHR.Web/Areas/Admin/Views/Employee/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model TestHR.Web.Areas.Admin.Models.EmployeeModel
+@using TestHR.Entities
 @{
     ViewBag.Title = "Add";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -159,13 +160,22 @@
                                         </tr>
                                     </thead>
                                     <tbody id="eduTBody">
-                                        <tr>
-                                            <td>@Html.TextBoxFor(model => model.EducationHistories[0].Degree)</td>
-                                            <td>@Html.TextBoxFor(model => model.EducationHistories[0].InstituteName)</td>
-                                            <td>@Html.TextBoxFor(model => model.EducationHistories[0].Subject)</td>
-                                            <td>@Html.TextBoxFor(model => model.EducationHistories[0].PassingYear)</td>
-                                            <td>@Html.TextBoxFor(model => model.EducationHistories[0].Result)</td>
-                                        </tr>
+                                        @{
+                                            int rowNum = 0;
+
+                                            foreach (var eduHistory in Model.EducationHistories)
+                                            {
+                                                <tr>
+                                                    @Html.HiddenFor(model => model.EducationHistories[rowNum].Id, new { @Value = eduHistory.Id })
+                                                    <td>@Html.TextBoxFor(model => model.EducationHistories[rowNum].Degree, new { @Value = eduHistory.Degree })</td>
+                                                    <td>@Html.TextBoxFor(model => model.EducationHistories[rowNum].InstituteName, new { @Value = eduHistory.InstituteName })</td>
+                                                    <td>@Html.TextBoxFor(model => model.EducationHistories[rowNum].Subject, new { @Value = eduHistory.Subject })</td>
+                                                    <td>@Html.TextBoxFor(model => model.EducationHistories[rowNum].PassingYear, new { @Value = eduHistory.PassingYear.ToString("dd-MM-yyyy") })</td>
+                                                    <td>@Html.TextBoxFor(model => model.EducationHistories[rowNum].Result, new { @Value = eduHistory.Result })</td>
+                                                </tr>
+                                                rowNum++;
+                                            }
+                                        }
                                     </tbody>
                                     <tfoot>
                                         <tr><td><input value="Add More.." onclick="AddNewEduRow()" class="" type="button" /></td></tr>
@@ -183,20 +193,29 @@
                                             <td>Position</td>
                                             <td>Start Date</td>
                                             <td>End Date</td>
-                                            <td>&nbsp;</td>
+                                         
                                         </tr>
                                     </thead>
                                     <tbody id="expTBody">
-                                        <tr>
-                                            <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[0].CompanyName)</td>
-                                            <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[0].CompanyAddress)</td>
-                                            <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[0].Department)</td>
-                                            <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[0].Position)</td>
-                                            <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[0].StartDate)</td>
-                                            <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[0].EndDate)</td>
-                                            <td></td>
-                                        </tr>
+                                        @{
+                                            int rowNo = 0;
+                                            foreach (var carrerHistory in Model.EmployeeCareerHistories)
+                                            {
 
+
+                                                <tr>
+                                                    @Html.HiddenFor(model=>model.EmployeeCareerHistories[rowNo].Id,new{@Value= carrerHistory.Id})
+                                                    <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[rowNo].CompanyName, new { @Value = carrerHistory.CompanyName })</td>
+                                                    <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[rowNo].CompanyAddress, new { @Value = carrerHistory.CompanyAddress })</td>
+                                                    <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[rowNo].Department, new { @Value = carrerHistory.Department})</td>
+                                                    <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[rowNo].Position, new { @Value = carrerHistory.Position })</td>
+                                                    <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[rowNo].StartDate, new { @Value = carrerHistory.StartDate.ToString("dd-MM-yyyy") })</td>
+                                                    <td>@Html.TextBoxFor(model => model.EmployeeCareerHistories[rowNo].EndDate, new { @Value = carrerHistory.EndDate.ToString("dd-MM-yyyy") })</td>
+                                      
+                                                </tr>
+                                                rowNo++;
+                                            }
+                                        }
                                     </tbody>
                                     <tfoot>
                                         <tr>
